--- a/src/css/common.css
+++ b/src/css/common.css
@@ -17,3 +17,27 @@ img {
   display: block;
   max-width: 100%;
 }
+
+/* Timer */
+
+.timer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.field {
+  text-align: center;
+  margin: 10px;
+}
+
+.value {
+  display: block;
+  font-weight: bold;
+  font-size: 50px;
+}
+
+.label {
+  display: block;
+  font-size: 15px;
+}
